added contact and about page

--- a/about.html
+++ b/about.html
@@ -22,23 +22,25 @@
 
     <nav class="navbar border-bottom border-light navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html" id="logo01">betH</a>
-            <a class="navbar-brand" href="index.html" id="logo02">serGeant</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo01">betH</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo02">serGeant</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="contactme.html">Contact</a>
                     </li>
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -48,36 +50,50 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    <div class="container border-light">
-        <div class="col-12" id="block">
-            <h1 class="hello-header">HELLO WORLD!</h1>
-            <br>
-            <h2 class="hello-header-sub">My name is Beth Sergeant. <br> I'm a Full-Stack web developer located
-                in New York, NY.</h2>
-            <br>
-            <br>
-            <br>
-            <hr>
-            <!-- Projects -->
-            <h3 class="hello-header-h3">Some of my latest work</h3>
-            <!-- Portfolio Grid Section -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.jpg" alt="friend icons" width="300" height="500">
-                    </div>
-                    <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="movie icons" width="300" height="500">
-                    </div>
-                    <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.jpg" alt="" width="300" height="500">
-                    </div>
-                </div>
-            </div>
+    <div class="container">
+        <div id="block">
 
+
+
+
+
+
+            <div class="row">
+                <div class="col-4">
+                    <h1>About Me</h1>
+                    <hr>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <img src="assets/images/ers.jpg" alt="Photo of me"
+                        style="width: 324px; height: 450px" id="picture-css">
+                </div>
+                <div class="col-8">
+                    <p>
+                        Puppy kitty ipsum dolor sit good dog foot stick canary.
+                        Teeth Mittens grooming vaccine walk swimming nest good boy
+                        furry tongue heel furry treats fish. Cage run fast kitten
+                        dinnertime ball run foot park fleas throw house train licks
+                        stick dinnertime window. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies.
+                    </p>
+                    <p>
+                        Puppy kitty ipsum dolor sit good dog foot stick canary.
+                        Teeth Mittens grooming vaccine walk swimming nest good boy
+                        furry tongue heel furry treats fish. Cage run fast kitten
+                        dinnertime ball run foot park fleas throw house train licks
+                        stick dinnertime window. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies.
+                    </p>
+                </div>
+
+            </div>
         </div>
     </div>
-    </div>
-
     <!-- End of container -->
 
     <!-- Start of footer -->
