--- a/contactme.html
+++ b/contactme.html
@@ -22,8 +22,8 @@
 
     <nav class="navbar border-bottom border-light navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html" id="logo01">betH</a>
-            <a class="navbar-brand" href="index.html" id="logo02">serGeant</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo01">betH</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo02">serGeant</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,8 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="contactme.html">Contact</a>
                     </li>
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -50,32 +52,8 @@
     <!-- Start of container -->
     <div class="container border-light">
         <div class="col-12" id="block">
-            <h1 class="hello-header">HELLO WORLD!</h1>
-            <br>
-            <h2 class="hello-header-sub">My name is Beth Sergeant. <br> I'm a Full-Stack web developer located
-                in New York, NY.</h2>
-            <br>
-            <br>
-            <br>
-            <hr>
-            <!-- Projects -->
-            <h3 class="hello-header-h3">Some of my latest work</h3>
-            <!-- Portfolio Grid Section -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.jpg" alt="friend icons" width="300" height="500">
-                    </div>
-                    <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="movie icons" width="300" height="500">
-                    </div>
-                    <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.jpg" alt="" width="300" height="500">
-                    </div>
-                </div>
-            </div>
-
+            <h1>Contact Page</h1>
         </div>
-    </div>
     </div>
 
     <!-- End of container -->
