hello page design revisions

--- a/about.html
+++ b/about.html
@@ -52,23 +52,16 @@
     <!-- Start of container -->
     <div class="container">
         <div id="block">
-
-
-
-
-
-
             <div class="row">
                 <div class="col-4">
-                    <h1>About Me</h1>
+                    <h1 class="content-header">About Me</h1>
                     <hr>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-4">
-                    <img src="assets/images/ers.jpg" alt="Photo of me"
-                        style="width: 324px; height: 450px" id="picture-css">
+                    <img src="assets/images/ers.jpg" alt="Photo of me" style="width: 332px; height: 450px" id="picture-css">
                 </div>
                 <div class="col-8">
                     <p>
@@ -84,15 +77,26 @@
                         Puppy kitty ipsum dolor sit good dog foot stick canary.
                         Teeth Mittens grooming vaccine walk swimming nest good boy
                         furry tongue heel furry treats fish. Cage run fast kitten
-                        dinnertime ball run foot park fleas throw house train licks
+                        dinnertime balll run foot park fleas throw house train licks
                         stick dinnertime window. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies. Yawn litter fish yawn toy pet gate
                         throw Buddy kitty wag tail ball groom crate ferret heel wet nose
                         Rover toys pet supplies.
                     </p>
                 </div>
-
+                <div class="row">
+                    <div class="col-2">
+                        <a href="assets/resume.pdf"><img src="assets/images/res.png" style="width:60px; height:60px;">
+                            <div class="col-10">
+                            <p>See my resume</p>
+                        </a>
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
     <!-- End of container -->
 
