--- a/hellopage.html
+++ b/hellopage.html
@@ -36,7 +36,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="contactme.html">Contact</a>
                     </li>
                 </ul>
@@ -50,10 +50,9 @@
     <!-- Start of container -->
     <div class="container border-light">
         <div class="col-12" id="block">
-            <h1 class="hello-header">HELLO WORLD!</h1>
-            <br>
-            <h2 class="hello-header-sub">My name is Beth Sergeant. <br> I'm a Full-Stack web developer located
-                in New York, NY.</h2>
+            <h1 class="hello-header">HELLO WORLD, My name is Beth!</h1>
+            <h2 class="hello-header-sub"><br> I'm a full stack developer located
+                in New York City.</h2>
             <br>
             <br>
             <br>
@@ -64,12 +63,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.jpg" alt="friend icons" width="300" height="500">
+                        <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.png" alt="friend icons" width="300" height="500">
                     </div>
                     <div class="col-lg-4">
                         <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="movie icons" width="300" height="500">
                     </div>
-                    <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.jpg" alt="" width="300" height="500">
+                    <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.png" alt="" width="300" height="500">
                     </div>
                 </div>
             </div>
