--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
 
 </head>
 
@@ -83,21 +85,21 @@
                         Rover toys pet supplies. Yawn litter fish yawn toy pet gate
                         throw Buddy kitty wag tail ball groom crate ferret heel wet nose
                         Rover toys pet supplies.
-                    </p>
-                </div>
-                <div class="row">
-                    <div class="col-2">
-                        <a href="assets/resume.pdf"><img src="assets/images/res.png" style="width:60px; height:60px;">
-                            <div class="col-10">
-                            <p>See my resume</p>
-                        </a>
-                    </div>
-                    </div>
+                        <br>
+                        <br>
+                        <center>
+                            <a href="assets/images/resume.pdf">
+                            <button type="button" id="button-style" class="btn">
+                                    <i class="fa fa-download" aria-hidden="true"></i>
+                                Download My Resume</button></a>
+                        </center>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
+    </div>
+
     <!-- End of container -->
 
     <!-- Start of footer -->
