added portolio work

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactme.html">Contact</a>
                     </li>
-
-
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -52,68 +50,55 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-
     <div class="container border-light">
         <div class="col-12" id="block">
             <div class="row">
                 <div class="col-4">
-                    <h1 class="content-header">About Me</h1>
+                    <h1 class="content-header">Portfolio</h1>
                     <hr>
                 </div>
             </div>
 
+            <!-- Project icon containers -->
+            <!-- Will make the icons dymanic later, hover over to see the name of the project and short description -->
             <div class="container">
                 <div class="row">
-                    <div class="col-md">
-                        <a href="portfolio/friendfinder.html"> <img src="assets/images/ers.jpg" alt="Photo of me"></a>
+                    <div class="col-md-4">
+                        <a href="portfolio/friendfinder.html"><img class="img-fluid block-example border border-light"
+                                src="assets/images/friendfinder.png" alt="mockup friendfinder"></a>
                     </div>
-                    <div class="col-md">
-                        <p>
-                            Puppy kitty ipsum dolor sit good dog foot stick canary.
-                            Teeth Mittens grooming vaccine walk swimming nest good boy
-                            furry tongue heel furry treats fish. Cage run fast kitten
-                            dinnertime balll run foot park fleas throw house train licks
-                            stick dinnertime window. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies.</p>
-                        <p>
-                            Puppy kitty ipsum dolor sit good dog foot stick canary.
-                            Teeth Mittens grooming vaccine walk swimming nest good boy
-                            furry tongue heel furry treats fish. Cage run fast kitten
-                            dinnertime balll run foot park fleas throw house train licks
-                            stick dinnertime window. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies.
-                        </p>
-                    </div>
+                    <div class="col-md-4">
+                        <a href="portfolio/liri.html"><img class="img-fluid block-example border border-light" src="assets/images/liri.png"
+                                alt="mockup liri"></a></div>
+                    <a href="portfolio/crystalcollector.html">
+                        <div class="col-md-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.png"
+                                alt="mockup crystals">
+                    </a>
                 </div>
-
-
-                <div class="row">
-                    <div class="col-4">
-                        <span id="space">---</span>
-                    </div>
-                    <div class="col-4">
-                        <a href="assets/images/resume.pdf">
-                            <button type="button" id="button-style" class="btn">
-                                <i class="fa fa-download" aria-hidden="true"></i>
-                                Download My Resume</button></a>
-                    </div>
-                    <div class="col-4">
-                        <span id="space">---</span>
-                    </div>
-                </div>
-
-
-
-
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/party.png"
+                        alt="mockup party" width="300" height="500"></div>
+                <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/bamazon.png"
+                        alt="mockup bamazon" width="300" height="500"></div>
+                <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/placeholder1.png"
+                        alt="mockup placeholder1" width="300" height="500"></div>
             </div>
         </div>
+        <br>
+        <div class="row">
+            <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/placeholder2.png"
+                    alt="mockup party" width="300" height="500"></div>
+            <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/placeholder3.png"
+                    alt="mockup bamazon" width="300" height="500"></div>
+            <div class="col-4"><img class="img-fluid block-example border border-light" src="assets/images/placeholder4.png"
+                    alt="mockup placeholder1" width="300" height="500"></div>
+        </div>
+    </div>
 
+
+    <!-- Container ends -->
     </div>
     </div>
     </div>
