--- a/contactme.html
+++ b/contactme.html
@@ -58,6 +58,8 @@
                     <hr>
                 </div>
             </div>
+
+            <div class="container">
             <div class="row">
                 <div class="col-8">
                     <span id="contact">Have a question or want to work with me work? Please fill out this form below or send an email to
@@ -75,6 +77,7 @@
                             class="social" alt="Instagram logo" style="width: 26px; height: 26px" id="social"></a>
                 </div>
             </div>
+        </div>
             <br>
             <br>
 <!-- Will need to get the contact form to send to email -->
@@ -125,6 +128,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
+                                <!-- <i class="fa fa-envelope" aria-hidden="true"></i> Add envelope to icon to button-->
                             <input type="submit" id="button-style" class="btn" value="Send message">
 
 
