--- a/hellopage.html
+++ b/hellopage.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
 
 </head>
 
@@ -23,14 +24,16 @@
 
     <nav class="navbar border-bottom border-light navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html" id="logo01">betH</a>
-            <a class="navbar-brand" href="index.html" id="logo02">serGeant</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo01">betH</a>
+            <a class="navbar-brand" href="hellopage.html" id="logo02">serGeant</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+
+                    <!-- Need to figure out how to make the hover links blue, blue needs to be incorporated more -->
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
@@ -64,17 +67,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.png" alt="friend icons" width="300" height="500">
-                    </div>
+                        <a href="portfolio/friendfinder.html">
+                            <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.png"
+                                alt="friendfriend mock up">
+                        </a></div>
+
                     <div class="col-lg-4">
-                        <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="movie icons" width="300" height="500">
-                    </div>
-                    <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.png" alt="" width="300" height="500">
-                    </div>
+                        <a href="portfolio/liri.html">
+                            <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="liri mock up">
+                        </a></div>
+                    <a href="portfolio/crystalcollector.html">
+                        <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.png"
+                                alt="crystal mock up">
+                    </a>
                 </div>
             </div>
-
         </div>
+
+    </div>
     </div>
     </div>
 
